# alt-tabs

./: BRANCH_INTEGRATION_STATUS.md  IMPLEMENTATION_BLUEPRINT.md  README.md  REVIEW_FINDINGS_PREIMPLEMENTATION.md  app.py  hotel_california.py  instrument.py  la_marseillaise.txt  main.py  marseillaise_shift.py  package-lock.json  package.json  pitch.py  pyproject.toml  requirements.txt  run_app.bat  run_app.sh  shift_and_transpose.py  test.py  test_input.py  vite.config.ts
acoustic-fretboard/: index.html  package-lock.json  package.json
acoustic-fretboard/src/: main.ts  style.css
bass-fretboard/: package-lock.json  package.json
bass-fretboard/src/: main.ts  style.css
electric-fretboard/: package-lock.json  package.json
electric-fretboard/src/: main.ts
src/: index.ts  style.css
src/alttabs/: errors.py  fretboard_component.py  input_tab.py  instrument.py  midi_to_tab.py  pipeline.py  pitch.py  position_shift.py  score.py  score_ingest.py  tab.py  transform.py
tests/: test_all.py  test_instrument.py  test_parser.py  test_pitch.py  test_render.py  test_score.py
ui/: fretboard_component.py
